[metadata]
name = tripleo-validations
summary = Validations for TripleO deployments.
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    tripleo_validations
data_files =
    share/tripleo-validations = sudoers
    share/tripleo-validations = ../tripleo-ansible-inventory.py
    share/tripleo-validations/validations = ../validations/*
scripts =
    run-validation

[entry_points]
mistral.actions =
    tripleo.run_validations = tripleo_validations.actions.run_validations:RunValidations

